# fetchd

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Dockerfile.gcr  Dockerfile.hub  Dockerfile.old  INTEGRATION.md  Makefile  README.md  RELEASING.md  SECURITY.md  build_local.sh  ci.Dockerfile  config.yaml  config2.yaml  docker-compose.yml  go.mod  go.sum  hub.Dockerfile  initchain.sh  sims.mk
.github/: CODEOWNERS  pull_request_template.md
app/: altres_merge.go  ante.go  app.go  app_test.go  cudos_merge.go  encoding.go  export.go  genesis.go  mint.go  ordered_map.go  prefix.go  reconciliation.go  reconciliation_data.csv  sigverify.go  sim_bench_test.go  sim_test.go  upgrade_0_11_4.go  upgrade_0_11_4_reconciliation.go  upgrade_cudos.go  upgrade_cudos_distribution.go  upgrade_network_config.go  upgrade_v_11_4_manifest.go  upgrade_v_11_4_network_config.go  utils.go
cli_test/: README.md  cli_test.go  test_helpers.go
contrib/: gitian-build.sh
docker/: logs.sh  run_all.sh  run_rest_server.sh  run_wasmd.sh  setup.sh  setup_wasmd.sh
scripts/: Pipfile  README.md  devgenesis.py  devgenesis.sh  devgenesis_from_other_branch.py  genesis_helpers.py  protocgen.sh  prune_genesis_codes.py  pyproject.toml  query_all_registrations.sh  replace_validator.py  run-single-node.sh  statesync.bash
scripts/genesisReplace/: go.mod  main.go
scripts/reconciliation/tests/: package.json
scripts/tests/: .gitignore  package-lock.json  package.json  stake-reconciliation-migrate_simple.bats  test_genesis.json  test_registrations.json  test_staked_export.csv
(+413 files in other folders)
